@@ -2,6 +2,11 @@
 SVN
 ---
 
+XML:   Resolved issue CASTOR-1489 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Added support for abstract <complexType> definitions.
+       Details: http://jira.codehaus.org/browse/CASTOR-1489
+       (Werner - 20060824)
+
 JDO:   Resolved issue CASTOR-1471 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
        Added support for Progress.
        Details: http://jira.codehaus.org/browse/CASTOR-1471
